# copypaste.fyi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.backend  PROJECT.md  README.md  SECURITY.md  agents.md  build.rs  build.sh  build_script  docker-compose.yml  fly.toml  vercel.json
.github/workflows/: auto-research.yml  ci.yml  deploy-fly.yml  docker-publish.yml  ocaml-ci.yml  release.yml
blockchain/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
blockchain/contracts/: PasteAnchor.sol
blockchain/scripts/: deploy.ts
docs/: DOCKER_OPTIMIZATION.md  demo.tape  encryption.md
docs/superpowers/plans/: 2026-03-17-agent-pipeline.md
docs/superpowers/specs/: 2026-03-17-agent-pipeline-design.md  2026-03-17-copypaste-revamp-design.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: install_playwright.js
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts  types.ts  viewer.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: BurnToggle.tsx  CommandPalette.tsx  CopyButton.tsx  DecryptForm.tsx  EncryptToggle.tsx  ErrorBoundary.tsx  ExpireSelect.tsx  FloatingAboutButton.tsx  Header.tsx  LanguageSelect.tsx  Layout.tsx  MermaidDiagram.tsx  PasteTable.tsx  PrivacyJourney.tsx  Skeleton.tsx  ThemeToggle.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  MermaidDiagram.test.tsx
frontend/src/components/charts/: AreaGroupChart.tsx  DistributionCard.tsx
frontend/src/components/editor/: MonacoEditor.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  index.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useHotkeys.ts  useTheme.ts
frontend/src/lib/: countdown.ts  languages.ts  time.ts
frontend/src/lib/__tests__/: countdown.test.ts
frontend/src/pages/: About.tsx  Composer.tsx  Dashboard.tsx  Login.tsx  NotFound.tsx  PasteForm.tsx  PasteView.tsx  Stats.tsx  UserPastes.tsx  Viewer.tsx
frontend/src/server/: types.ts
frontend/src/stores/: auth.ts  pasteComposer.ts
frontend/src/stores/__tests__/: auth.test.ts  pasteComposer.test.ts
frontend/src/theme/: ThemeContext.ts  ThemeProvider.tsx  themeStorage.ts
frontend/src/theme/__tests__/: themeStorage.test.ts
frontend/src/types/: commandPalette.ts
frontend/tests/: healthcheck.spec.ts
migrations/: 20231026000000_init.sql  20231026000000_initial.sql
ocaml-crypto-verifier/: Dockerfile  README.md  crypto_verifier.opam  dune-project  local-ci.sh  test.sh
ocaml-crypto-verifier/lib/: crypto_verifier.ml  dune
ocaml-crypto-verifier/test/: crypto_verifier_test.ml  dune
proto/: paste.proto
scripts/: agent.sh  auto-research.sh  build.sh  dev.sh  install.sh  install_deps.sh  install_fly.sh  install_playwright.js  package_cli.sh  precommit.sh  redis_proxy.js  run_backend.sh  run_both.sh  run_ci_locally.sh  run_docker.sh  run_frontend.sh  run_local.sh  setup_git_hooks.sh  setup_vercel.sh  stop.sh  test-docker-builds.sh
src/: lib.rs  main.rs
src/server/: api_keys.rs  attestation.rs  blockchain.rs  bundles.rs  config.rs  cors.rs  crypto.rs  handlers.rs  mod.rs  models.rs  rate_limit.rs  redis.rs  render.rs  sessions.rs  stego.rs  time.rs  tor.rs  webhook.rs
static/: index.html  view.css
tests/: crypto_tests.rs  lib_tests.rs  server_tests.rs
