[package]
name = "copypaste"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
nanoid = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-escape = "0.2"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
urlencoding = "2.1"
data-encoding = "2.4"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7"

[lib]
name = "copypaste"
path = "src/lib.rs"

[[bin]]
name = "copypaste"
path = "src/main.rs"

[[bin]]
name = "cpaste"
path = "src/bin/cpaste.rs"
