[package]
name = "copypaste"
version = "0.2.0"
edition = "2021"
description = "Self-hostable, Rust-powered paste tool — replaces pastebin, transfer.sh, and ix.io"
license = "MIT"
repository = "https://github.com/qxlsz/copypaste.fyi"
homepage = "https://copypaste.fyi"
documentation = "https://github.com/qxlsz/copypaste.fyi/blob/main/README.md"
keywords = ["paste", "clipboard", "cli", "file-sharing", "self-hosted"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
exclude = [
    "ocaml-crypto-verifier/",
    "blockchain/",
    "docs/",
    ".github/",
    "scripts/",
    "frontend/",
]
autobins = false

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
nanoid = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
utoipa = { version = "4.2", features = ["chrono", "preserve_order"] }
utoipa-scalar = { version = "0.1", features = ["rocket"] }
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-escape = "0.2"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
pqc_kyber = "0.7"
sha2 = "0.10"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
urlencoding = "2.1"
data-encoding = "2.4"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["serde"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
subtle = "2"
zeroize = { version = "1", features = ["alloc"] }

[dev-dependencies]
httpmock = "0.7"
regex = "1.11"
once_cell = "1.19"

[lib]
name = "copypaste"
path = "src/lib.rs"

[[bin]]
name = "copypaste"
path = "src/bin/copypaste.rs"
