opam-version: "2.0"
name: "crypto_verifier"
version: "0.1.0"
synopsis: "Cryptographic verification service for post-quantum algorithms"
description: """
A service for verifying cryptographic operations, including post-quantum algorithms
like Kyber hybrid encryption.
"""
maintainer: "copypaste.fyi team"
authors: "copypaste.fyi team"
license: "MIT"
homepage: "https://github.com/qxlsz/copypaste.fyi"
bug-reports: "https://github.com/qxlsz/copypaste.fyi/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.7"}
  "mirage-crypto-rng" {>= "0.11.0"}
  "yojson" {>= "2.0.0"}
  "ounit2" {>= "2.2.0"}
  "lwt" {>= "5.6.0"}
  "cohttp-lwt-unix" {>= "5.0.0"}
  "cohttp" {>= "5.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
