(lang dune 3.7)

(package
 (name crypto_verifier)
 (version 0.1.0)
 (authors "copypaste.fyi team")
 (maintainers "copypaste.fyi team")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.7))
  (mirage-crypto (>= 0.11.0))
  (mirage-crypto-rng (>= 0.11.0))
  (cohttp-lwt-unix (>= 5.0.0))
  (cohttp (>= 5.0.0))
  (lwt (>= 5.6.0))
  (yojson (>= 2.0.0))
  (ppx_deriving_yojson (>= 3.7.0))
  (logs (>= 0.7.0))
  (fmt (>= 0.9.0))
  (base64 (>= 3.5.0))
  (hex (>= 1.5.0))
  (cstruct (>= 6.0.0))
  (zarith (>= 1.12))
  (ounit2 (>= 2.2.0))))
